Change styles to avoid horizontal scrolling

--- a/src/app/components/description/description.component.css
+++ b/src/app/components/description/description.component.css
@@ -1,22 +1,20 @@
 .description {
 width: 100%;
-margin: 10px 20px;
 display: flex;
 justify-content: center;
-align-items: center;
 }
 
 .description ul {
-  max-width: 700px;
+  max-width: 650px;
   padding: 40px;
 }
 
 .description li {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 h2 {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   font-size: 1.5rem;
 }
 
