--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 * {
   margin: 0;
   box-sizing: border-box;
+  max-width: 100%;
+  overflow-x: hidden;
 }
